--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="all.css">
+    
 </head>
 <body>
       <div class="header">
         <ul class="menu">
-            <li><a href="">首頁</a></li>
-            <li><a href="">部落格</a></li>
+            <li><a href="#">首頁</a></li>
+            <li><a href="#">部落格</a></li>
         </ul>
    <div class="info"><div class="info-img">
         <img src="https://github.com/hexschool/2022-web-layout-training/blob/16da9aa899a5190ed2d5bdfe48ae1cc631b95463/2025-web-camp/desktop/blog-content/About%20Section.png?raw=true" alt=""></div>
             <div class="info-right"><div class="info-content"><time>2024/10/21</time>
             <div class="about"><p>前端開發 x 職涯成長</p>
-            <a href="">最新文章</a></div>
+            <a href="#">最新文章</a></div>
             <h2>自學前端不用怕：從零開始的三大關鍵</h2>
         </div></div></div>
 
@@ -38,7 +39,7 @@
       <p>建議做法：</p>
       <ol class="mb-24">
         <li>先掌握基礎 CSS 後，再學習 SASS 或 LESS 這類預處理器，提升樣式開發效率。</li>
-        <li>善用 <a class="mark"href="">CSS-Tricks</a>等資源，了解常見版型技巧。  </li></ol>
+        <li>善用 <a class="mark"href="#">CSS-Tricks</a>等資源，了解常見版型技巧。  </li></ol>
         <h3>JavaScript 核心觀念</h3>
         <p>為何重要：互動效果、資料處理、前端邏輯都仰賴 JavaScript。</p>
         <p>建議做法：</p>
@@ -74,7 +75,7 @@
     <h3>多參加前端挑戰 / Hackathon</h3>
     <ul class="mb-24 list">
       <li>在實作中快速累積經驗，也能認識更多同好。</li>
-      <li>像是 <a class="mark"href="">Frontend Mentor</a>提供多種真實設計稿，可練習切版與互動。</li>
+      <li>像是 <a class="mark"href="#">Frontend Mentor</a>提供多種真實設計稿，可練習切版與互動。</li>
     </ul>
       <h3>打造個人作品集網站</h3>
       <ul class="mb-24 list">
@@ -107,19 +108,19 @@
   </ul>
   
   <ul class="page">
-    <li><a class="bottom"href="">&lt上一篇</a></li>
-    <li><a class="bottom"href="">下一篇&gt</a></li>
+    <li><a class="bottom"href="#">&lt上一篇</a></li>
+    <li><a class="bottom"href="#">下一篇&gt</a></li>
   </ul>
 </div></div>
    
      <div class="footer">
   <div class="footer-content"><p>alysewang@hexschool.com</p>
     <ul class="symbol">
-      <li><a href=""><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon.png?raw=true" alt="youtube"></a></li>
-      <li><a href=""><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-1.png?raw=true" alt="podcast"></a></li>
-      <li><a href=""><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-2.png?raw=true" alt="facebook"></a></li>
-      <li><a href=""><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/icons8-linkedin.png?raw=true" alt="LinkedIn"></a></li>
-      <li><a href=""><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-3.png?raw=true" alt="instagram"></a></li>
+      <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon.png?raw=true" alt="youtube"></a></li>
+      <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-1.png?raw=true" alt="podcast"></a></li>
+      <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-2.png?raw=true" alt="facebook"></a></li>
+      <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/icons8-linkedin.png?raw=true" alt="LinkedIn"></a></li>
+      <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-3.png?raw=true" alt="instagram"></a></li>
     </ul>
   </div>
 <div class="copyright"><p>© 2025 Alyse Wang. All rights reserved.</p></div>
